--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.desktop-file-drag-drop[ng-reflect-disabled='true'] {
+.desktop-file-drag-drop.disabled {
   background-color: rgba(colors.$grey, 0.2) !important;
   cursor: not-allowed;
 
