Add days text and put application above NOI for create menu
* Use set timeout instead of afterContent so that the component only sets focus once instead of everytime it re-renders.

--- a/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/notice-of-intent.component.html
@@ -5,6 +5,7 @@
       [application]="noticeOfIntent"
       [reconsiderations]="[]"
       [modifications]="[]"
+      days="Calendar Days"
     ></app-details-header>
     <div class="content">
       <div class="nav">
