--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -192,11 +192,11 @@
             </div>
           </div>
 
-          <div class="decision-content">
+          <div class="decision-content" *ngIf="decision.outcome.code !== 'REFU'">
             <h1 class="subheading1">Conditions</h1>
             <div>
               <a href="#" (click)="onNavigateToConditions()"
-                >View Conditions<mat-icon class="conditions-link-icon">link</mat-icon></a
+                >View Conditions<mat-icon class="conditions-link-icon">open_in_new</mat-icon></a
               >
             </div>
           </div>
