decision component and conditions visibility; rescinded date on view

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
@@ -70,9 +70,9 @@ section {
     margin-bottom: 6px !important;
   }
 
-  & > div {
+  // & > div {
     font-size: 16px;
-  }
+  // }
 }
 
 .header {
