--- a/alcs-frontend/src/app/features/notice-of-intent/preparation/preparation.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/preparation/preparation.component.html
@@ -7,6 +7,7 @@
       [value]="selectedSubtypes"
       (save)="saveSubtypes($event)"
       [multiple]='true'
+      class='dropdown'
     ></app-inline-dropdown>
   </div>
   <div>
