--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
@@ -28,7 +28,7 @@ section {
 .post-decisions {
   padding: 6px 32px;
   background-color: colors.$grey-light;
-  grid-template-columns: 50% 50%;;
+  grid-template-columns: 50% 50%;
   display: grid;
   min-height: 36px;
   text-transform: uppercase;
@@ -70,9 +70,7 @@ section {
     margin-bottom: 6px !important;
   }
 
-  // & > div {
-    font-size: 16px;
-  // }
+  font-size: 16px;
 }
 
 .header {
