fix release button to be disabled

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -283,7 +283,7 @@
       class="release-decision-btn"
       type="button"
       [disabled]="
-        !form.valid ||
+        (form.touched && !form.valid) ||
         !conditionsValid ||
         !componentsValid ||
         (components.length === 0 && showComponents) ||
