--- a/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-submission/primary-contact/primary-contact.component.html
@@ -66,7 +66,8 @@
           </div>
         </div>
         <div class="full-row">
-          <label for="orgName">Organization Name (optional)</label>
+          <label *ngIf="!isCrownOwner" for="orgName">Organization Name (optional)</label>
+          <label *ngIf="isCrownOwner" for="orgName">Ministry or Department</label>
           <mat-form-field appearance="outline">
             <input id="orgName" matInput placeholder="Enter Organization Name" formControlName="organizationName" />
           </mat-form-field>
