--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -145,22 +145,29 @@
             </div>
             <div>
               <div class="subheading2">Stats Required</div>
-              {{ decision.isStatsRequired ? 'Yes' : 'No' }}
+              <app-inline-boolean
+                [selectedValue]="decision.isStatsRequired ?? null"
+                (save)="onStatsRequiredUpdate(decision.uuid, $event)"
+              ></app-inline-boolean>
             </div>
-            <div>
+            <div *ngIf="decision.outcome?.code === 'RESC'">
               <div class="subheading2">Rescinded Date</div>
               <ng-container *ngIf="decision.rescindedDate">{{ decision.rescindedDate | momentFormat }}</ng-container>
               <ng-container *ngIf="!decision.rescindedDate">No Data</ng-container>
             </div>
           </div>
 
-          <div class="decision-content">
+          <div class="decision-content" *ngIf="decision.outcome?.code === 'RESC'">
             <div class="subheading2">Rescinded Comment</div>
             {{ decision.rescindedComment ? decision.rescindedComment : 'No Data' }}
           </div>
 
           <div class="decision-documents decision-content">
-            <app-decision-documents [editable]="false" [decision]="decision"></app-decision-documents>
+            <app-decision-documents
+              [editable]="decision.isDraft"
+              [loadData]="false"
+              [decision]="decision"
+            ></app-decision-documents>
           </div>
 
           <!-- Components -->
@@ -176,7 +183,10 @@
               <div class="decision-content grid-3">
                 <div>
                   <div class="subheading2">ALR Area Impacted (ha)</div>
-                  {{ component.alrArea }}
+                  <app-inline-number
+                    [value]="component?.alrArea?.toString()"
+                    (save)="onSaveAlrArea(decision.uuid, component.uuid!, $event)"
+                  ></app-inline-number>
                 </div>
                 <div>
                   <div class="subheading2">Agri Cap</div>
@@ -203,7 +213,10 @@
             </div>
           </div>
 
-          <div class="decision-content" *ngIf="['APPR', 'APPA', 'RESC'].includes(decision.outcome.code) && decision.isSubjectToConditions">
+          <div
+            class="decision-content"
+            *ngIf="['APPR', 'APPA', 'RESC'].includes(decision.outcome.code) && decision.isSubjectToConditions"
+          >
             <h1 class="subheading1">Conditions</h1>
             <div>
               <a href="#" (click)="onNavigateToConditions()"
