--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision.component.scss
@@ -43,7 +43,7 @@ section {
 
 .post-decisions {
   padding: 6px 32px;
-  background-color: colors.$accent-color-light;
+  background-color: colors.$grey-light;
   grid-template-columns: 1fr 1fr;
   display: grid;
   min-height: 36px;
