application date updates on draft decision

--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -4,7 +4,8 @@
       [application]="application"
       [reconsiderations]="reconsiderations"
       [modifications]="modifications"
-      heading='Application'
+      days="Business Days"
+      heading="Application"
     ></app-details-header>
     <div class="content">
       <div class="nav">
