make name required on holiday

--- a/alcs-frontend/src/app/features/admin/holiday/holiday-dialog/holiday-dialog.component.html
+++ b/alcs-frontend/src/app/features/admin/holiday/holiday-dialog/holiday-dialog.component.html
@@ -23,7 +23,7 @@
     <div>
       <mat-form-field class="holiday-name-input" appearance="outline">
         <mat-label>Name</mat-label>
-        <input matInput id="name" [(ngModel)]="model.name" name="name" />
+        <input matInput id="name" [(ngModel)]="model.name" name="name" required />
       </mat-form-field>
     </div>
   </form>
