--- a/alcs-frontend/src/app/features/notice-of-intent/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/decision/decision.component.scss
@@ -31,7 +31,8 @@ section {
 
 .days {
   display: inline-block;
-  margin-right: 6px;
+  margin-right: 16px;
+  margin-left: 16px;
 
   .mat-icon {
     font-size: 19px !important;
