Log user out of Siteminder at same time as Keycloak
* Add Log Out button to Provision Page

--- a/alcs-frontend/src/app/features/provision/provision.component.html
+++ b/alcs-frontend/src/app/features/provision/provision.component.html
@@ -1,5 +1,10 @@
-<div class="body1-text">
+<div class="body-text">
   <h5>Welcome to ALCS</h5>
-  You don't have permissions to the system. You will receive an email shortly providing
-  an access update.
+  <p>
+    You don't have permissions to the system. You will receive an email shortly providing an access update. <br /><br />
+    If you need to switch accounts, please log out.
+  </p>
+  <div>
+    <button class='logout' mat-flat-button color="primary" (click)="onLogout()">Log Out</button>
+  </div>
 </div>
