--- a/alcs-frontend/src/styles/toast.scss
+++ b/alcs-frontend/src/styles/toast.scss
@@ -1,8 +1,14 @@
 @use './colors';
 
+.cdk-overlay-pane {
+  &:has(mat-snack-bar-container.mat-mdc-snack-bar-container) {
+    transform: translateY(-50%) !important;
+  }
+}
+
 .mat-mdc-snack-bar-container {
+  margin: 0 !important;
   padding: 0 !important;
-  transform: translateY(-50%) !important;
 
   .mat-mdc-simple-snackbar {
     align-items: stretch;
